--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
         "outDir": "dist",
     },
     "include": [
-        "src/*.ts",
-        "src/typings.ts",
+        "src/**/*.ts",
+        "src/service-worker/*.ts",
         "./node_modules/@types",
     ],
     "exclude": [
