--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Snake game written in Typescript and Wasm",
   "scripts": {
     "start": "http-server ./dist",
-    "wasm:compile-dev": "emcc src/wasm/main.cpp -s ASSERTIONS=1 -s FILESYSTEM=0 -s WASM=01 -O1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s EXPORT_NAME=\"game\" -s ENVIRONMENT=\"web\" -s USE_SDL=2 -o dist/game.js -s EXPORTED_FUNCTIONS=\"['_main', '_malloc', '_setGameMode', '_pauseGame','_resumeGame', '_playGame', '_resizeGame']\" -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['ccall']\" --std=c++1z",
-    "wasm:compile": "emcc src/wasm/main.cpp -s -s WASM=1 -O3 --closure 1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s EXPORT_NAME=\"game\" -s ENVIRONMENT=\"web\" -s USE_SDL=2 -o dist/game.js -s EXPORTED_FUNCTIONS=\"['_main', '_malloc', '_setGameMode', '_pauseGame','_resumeGame', '_playGame', '_resizeGame']\" -s \"EXTRA_EXPORTED_RUNTIME_METHODS=['ccall']\" --std=c++1z",
     "rollup:build": "rollup -c --environment BUILD:production",
     "rollup:watch": "rollup -cw --environment BUILD:development",
     "build": "npm run rollup:build && npm run wasm:compile"
   },
   "keywords": [
     "Snake",
+    "Game",
     "Wasm",
-    "C++"
+    "C++",
+    "TypeScript",
+    "JavaScript"
   ],
   "author": "Justinas Delinda",
   "license": "MIT",
@@ -21,15 +22,19 @@
     "lit-element": "^2.0.1"
   },
   "devDependencies": {
-    "@types/emscripten": "0.0.31",
+    "@babel/core": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "@types/web-animations-js": "^2.2.7",
     "randomstring": "^1.1.5",
-    "rollup": "^1.6.0",
-    "rollup-plugin-copy-glob": "^0.3.0",
+    "rollup": "^1.10.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-copy": "^1.1.0",
+    "rollup-plugin-minify-html-literals": "^1.2.2",
     "rollup-plugin-modify": "^3.0.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.19.2",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-terser": "^4.0.4",
-    "typescript": "^3.3"
+    "rollup-plugin-typescript2": "^0.20.1",
+    "typescript": "^3.4.2"
   }
 }
